// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`1_dimColor 1`] = `
{
  "annotation": {},
  "chartType": "donut",
  "config": {
    "donut": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "label": {
        "enable": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelFontColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "donut": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "label": {
          "enable": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelFontColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "A-2019-利润-profit",
      "__Dim_Color__": "A-2019-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2019",
      "profit": 10,
      "profit2": 10,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "A-2019-销售额-sales",
      "__Dim_Color__": "A-2019-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 20,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "B-2019-利润-profit",
      "__Dim_Color__": "B-2019-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      "date": "2019",
      "profit": 30,
      "profit2": 10,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "B-2019-销售额-sales",
      "__Dim_Color__": "B-2019-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 60,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "C-2019-利润-profit",
      "__Dim_Color__": "C-2019-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      "date": "2019",
      "profit": 30,
      "profit2": 10,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "C-2019-销售额-sales",
      "__Dim_Color__": "C-2019-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 60,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "D-2019-利润-profit",
      "__Dim_Color__": "D-2019-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2019",
        "profit": 50,
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      "date": "2019",
      "profit": 50,
      "profit2": 10,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "D-2019-销售额-sales",
      "__Dim_Color__": "D-2019-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2019",
        "profit": 50,
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 100,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "E-2019-利润-profit",
      "__Dim_Color__": "E-2019-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2019",
        "profit": 40,
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      "date": "2019",
      "profit": 40,
      "profit2": 10,
      "type": "E",
    },
    {
      "__Dim_ColorId__": "E-2019-销售额-sales",
      "__Dim_Color__": "E-2019-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2019",
        "profit": 40,
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      "date": "2019",
      "profit2": 10,
      "sales": 80,
      "type": "E",
    },
    {
      "__Dim_ColorId__": "A-2020-利润-profit",
      "__Dim_Color__": "A-2020-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2020",
        "profit": 10,
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2020",
      "profit": 10,
      "profit2": 10,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "A-2020-销售额-sales",
      "__Dim_Color__": "A-2020-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2020",
        "profit": 10,
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      "date": "2020",
      "profit2": 10,
      "sales": 20,
      "type": "A",
    },
    {
      "__Dim_ColorId__": "B-2020-利润-profit",
      "__Dim_Color__": "B-2020-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      "date": "2020",
      "profit": 30,
      "profit2": 10,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "B-2020-销售额-sales",
      "__Dim_Color__": "B-2020-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      "date": "2020",
      "profit2": 10,
      "sales": 60,
      "type": "B",
    },
    {
      "__Dim_ColorId__": "C-2020-利润-profit",
      "__Dim_Color__": "C-2020-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      "date": "2020",
      "profit": 30,
      "profit2": 10,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "C-2020-销售额-sales",
      "__Dim_Color__": "C-2020-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      "date": "2020",
      "profit2": 10,
      "sales": 60,
      "type": "C",
    },
    {
      "__Dim_ColorId__": "D-2020-利润-profit",
      "__Dim_Color__": "D-2020-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2020",
        "profit": 50,
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      "date": "2020",
      "profit": 50,
      "profit2": 10,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "D-2020-销售额-sales",
      "__Dim_Color__": "D-2020-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2020",
        "profit": 50,
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      "date": "2020",
      "profit2": 10,
      "sales": 100,
      "type": "D",
    },
    {
      "__Dim_ColorId__": "E-2020-利润-profit",
      "__Dim_Color__": "E-2020-利润",
      "__Dim_Detail__": "利润",
      "__MeaId__": "profit",
      "__MeaName__": "利润",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2020",
        "profit": 40,
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      "date": "2020",
      "profit": 40,
      "profit2": 10,
      "type": "E",
    },
    {
      "__Dim_ColorId__": "E-2020-销售额-sales",
      "__Dim_Color__": "E-2020-销售额",
      "__Dim_Detail__": "销售额",
      "__MeaId__": "sales",
      "__MeaName__": "销售额",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2020",
        "profit": 40,
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      "date": "2020",
      "profit2": 10,
      "sales": 80,
      "type": "E",
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "colorRange": [
          0,
          1,
        ],
        "foldMap": {
          "profit": "利润",
          "sales": "销售额",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureRange": [
          10,
          100,
        ],
        "measureValue": "__MeaValue__",
      },
      "id": "donut",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "A-2019-利润-profit": "A-2019-利润",
          "A-2019-销售额-sales": "A-2019-销售额",
          "A-2020-利润-profit": "A-2020-利润",
          "A-2020-销售额-sales": "A-2020-销售额",
          "B-2019-利润-profit": "B-2019-利润",
          "B-2019-销售额-sales": "B-2019-销售额",
          "B-2020-利润-profit": "B-2020-利润",
          "B-2020-销售额-sales": "B-2020-销售额",
          "C-2019-利润-profit": "C-2019-利润",
          "C-2019-销售额-sales": "C-2019-销售额",
          "C-2020-利润-profit": "C-2020-利润",
          "C-2020-销售额-sales": "C-2020-销售额",
          "D-2019-利润-profit": "D-2019-利润",
          "D-2019-销售额-sales": "D-2019-销售额",
          "D-2020-利润-profit": "D-2020-利润",
          "D-2020-销售额-sales": "D-2020-销售额",
          "E-2019-利润-profit": "E-2019-利润",
          "E-2019-销售额-sales": "E-2019-销售额",
          "E-2020-利润-profit": "E-2020-利润",
          "E-2020-销售额-sales": "E-2020-销售额",
        },
        "colorItems": [
          "A-2019-利润-profit",
          "A-2019-销售额-sales",
          "B-2019-利润-profit",
          "B-2019-销售额-sales",
          "C-2019-利润-profit",
          "C-2019-销售额-sales",
          "D-2019-利润-profit",
          "D-2019-销售额-sales",
          "E-2019-利润-profit",
          "E-2019-销售额-sales",
          "A-2020-利润-profit",
          "A-2020-销售额-sales",
          "B-2020-利润-profit",
          "B-2020-销售额-sales",
          "C-2020-利润-profit",
          "C-2020-销售额-sales",
          "D-2020-利润-profit",
          "D-2020-销售额-sales",
          "E-2020-利润-profit",
          "E-2020-销售额-sales",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "类型",
      "encoding": "angle",
      "id": "type",
      "location": "dimension",
    },
    {
      "alias": "日期",
      "encoding": "angle",
      "id": "date",
      "location": "dimension",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "angle": [],
    "color": [
      "type",
      "date",
      "__MeaName__",
    ],
    "detail": [
      "__MeaName__",
    ],
    "tooltip": [
      "profit",
      "sales",
    ],
  },
  "locale": "zh-CN",
  "measures": [
    {
      "children": [
        {
          "alias": "利润",
          "encoding": "radius",
          "id": "profit",
          "parentId": "1",
        },
        {
          "alias": "销售额",
          "encoding": "radius",
          "id": "sales",
          "parentId": "1",
        },
      ],
      "id": "1",
    },
  ],
}
`;

exports[`1_dimColor 2`] = `
{
  "animation": true,
  "background": "transparent",
  "categoryField": "__Dim_ColorId__",
  "color": {
    "domain": [
      "A-2019-利润-profit",
      "A-2019-销售额-sales",
      "B-2019-利润-profit",
      "B-2019-销售额-sales",
      "C-2019-利润-profit",
      "C-2019-销售额-sales",
      "D-2019-利润-profit",
      "D-2019-销售额-sales",
      "E-2019-利润-profit",
      "E-2019-销售额-sales",
      "A-2020-利润-profit",
      "A-2020-销售额-sales",
      "B-2020-利润-profit",
      "B-2020-销售额-sales",
      "C-2020-利润-profit",
      "C-2020-销售额-sales",
      "D-2020-利润-profit",
      "D-2020-销售额-sales",
      "E-2020-利润-profit",
      "E-2020-销售额-sales",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "donut",
    "values": [
      {
        "__Dim_ColorId__": "A-2019-利润-profit",
        "__Dim_Color__": "A-2019-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "profit2": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2019",
        "profit": 10,
        "profit2": 10,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "A-2019-销售额-sales",
        "__Dim_Color__": "A-2019-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "profit2": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "B-2019-利润-profit",
        "__Dim_Color__": "B-2019-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "B",
        },
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "B-2019-销售额-sales",
        "__Dim_Color__": "B-2019-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "B",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "C-2019-利润-profit",
        "__Dim_Color__": "C-2019-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "C",
        },
        "date": "2019",
        "profit": 30,
        "profit2": 10,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "C-2019-销售额-sales",
        "__Dim_Color__": "C-2019-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2019",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "C",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "D-2019-利润-profit",
        "__Dim_Color__": "D-2019-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2019",
          "profit": 50,
          "profit2": 10,
          "sales": 100,
          "type": "D",
        },
        "date": "2019",
        "profit": 50,
        "profit2": 10,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "D-2019-销售额-sales",
        "__Dim_Color__": "D-2019-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2019",
          "profit": 50,
          "profit2": 10,
          "sales": 100,
          "type": "D",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "E-2019-利润-profit",
        "__Dim_Color__": "E-2019-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2019",
          "profit": 40,
          "profit2": 10,
          "sales": 80,
          "type": "E",
        },
        "date": "2019",
        "profit": 40,
        "profit2": 10,
        "type": "E",
      },
      {
        "__Dim_ColorId__": "E-2019-销售额-sales",
        "__Dim_Color__": "E-2019-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2019",
          "profit": 40,
          "profit2": 10,
          "sales": 80,
          "type": "E",
        },
        "date": "2019",
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
      {
        "__Dim_ColorId__": "A-2020-利润-profit",
        "__Dim_Color__": "A-2020-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2020",
          "profit": 10,
          "profit2": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2020",
        "profit": 10,
        "profit2": 10,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "A-2020-销售额-sales",
        "__Dim_Color__": "A-2020-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2020",
          "profit": 10,
          "profit2": 10,
          "sales": 20,
          "type": "A",
        },
        "date": "2020",
        "profit2": 10,
        "sales": 20,
        "type": "A",
      },
      {
        "__Dim_ColorId__": "B-2020-利润-profit",
        "__Dim_Color__": "B-2020-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "B",
        },
        "date": "2020",
        "profit": 30,
        "profit2": 10,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "B-2020-销售额-sales",
        "__Dim_Color__": "B-2020-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "B",
        },
        "date": "2020",
        "profit2": 10,
        "sales": 60,
        "type": "B",
      },
      {
        "__Dim_ColorId__": "C-2020-利润-profit",
        "__Dim_Color__": "C-2020-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "C",
        },
        "date": "2020",
        "profit": 30,
        "profit2": 10,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "C-2020-销售额-sales",
        "__Dim_Color__": "C-2020-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "profit2": 10,
          "sales": 60,
          "type": "C",
        },
        "date": "2020",
        "profit2": 10,
        "sales": 60,
        "type": "C",
      },
      {
        "__Dim_ColorId__": "D-2020-利润-profit",
        "__Dim_Color__": "D-2020-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2020",
          "profit": 50,
          "profit2": 10,
          "sales": 100,
          "type": "D",
        },
        "date": "2020",
        "profit": 50,
        "profit2": 10,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "D-2020-销售额-sales",
        "__Dim_Color__": "D-2020-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2020",
          "profit": 50,
          "profit2": 10,
          "sales": 100,
          "type": "D",
        },
        "date": "2020",
        "profit2": 10,
        "sales": 100,
        "type": "D",
      },
      {
        "__Dim_ColorId__": "E-2020-利润-profit",
        "__Dim_Color__": "E-2020-利润",
        "__Dim_Detail__": "利润",
        "__MeaId__": "profit",
        "__MeaName__": "利润",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2020",
          "profit": 40,
          "profit2": 10,
          "sales": 80,
          "type": "E",
        },
        "date": "2020",
        "profit": 40,
        "profit2": 10,
        "type": "E",
      },
      {
        "__Dim_ColorId__": "E-2020-销售额-sales",
        "__Dim_Color__": "E-2020-销售额",
        "__Dim_Detail__": "销售额",
        "__MeaId__": "sales",
        "__MeaName__": "销售额",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2020",
          "profit": 40,
          "profit2": 10,
          "sales": 80,
          "type": "E",
        },
        "date": "2020",
        "profit2": 10,
        "sales": 80,
        "type": "E",
      },
    ],
  },
  "innerRadius": 0.6400000000000001,
  "label": {
    "formatMethod": [Function],
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "outerRadius": 0.8,
  "padding": 0,
  "pie": {
    "state": {
      "hover": {
        "outerRadius": 0.8800000000000001,
      },
    },
    "style": {
      "lineWidth": 1,
      "stroke": "#ffffff",
    },
  },
  "region": [
    {
      "clip": true,
    },
  ],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "visible": true,
  },
  "type": "pie",
  "valueField": "__MeaValue__",
}
`;
